2011-09-21 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKBoxingUtils.m: Implement more type information extraction.
	* Source/type_encoding_cases.h: Import from libobjc2
	* Documentation/readme.texi: Mention MIT licensed file from libobjc2
	* Tests/TestDKArgument.m: Add some tests for the new type info functions.
	* README: Regenerate

	More preliminaries for type conversion improvements.

2011-09-20 Niels Grewe <niels.grewe@halbordnung.de>

        * Source/DKBoxingUtils.h
        * Source/DKBoxingUtils.m:
	Factor out some type conversion logic.
	* Source/DKMethod.h
        * Source/DKArgument.h
        * Source/DKMethod.m
        * Source/DKArgument.m
        * Source/DKPropertyMethod.m
        * Source/GNUmakefile:
	Follow-Up changes for DKBoxingUtils.

2011-09-09 Niels Grewe <niels.grewe@halbordnung.de>

	* Source/DKArgument.h
	* Source/DKArgument.m
	* Source/DKIntrospectionNode.h
	* Source/DKIntrospectionNode.m:
	Little work on emitting introspection data.
	* Source/DKObjectPathNode.m
	* Source/DKPortNameServer.m
	* Source/DKPort.m
	* Source/DKNotificationCenter.m
	* Tests/TestDKArgument.m:
	Un-bitrot and fix warnings spotted by clang.

	Small maintenance changes.

2011-05-17 Andreas Schik <andreas.schick@web.de>

	* Source/DKNotificationCenter.m: Fix off-by-one error when
	computing the interface from a notification name.

2011-05-13 Niels Grewe <niels.grewe@halbordnung.de>

	* Headers/DKNotificationCenter.h
	* Source/DKNotificationCenter.m:
	Replace libdbus API-calls with DBusKit methods for inserting and
	removing match rules on the bus. Depend on the bus object to do
	this.
	* Source/DKProxy+Private.h
	* Source/DKProxy.m:
	Add method to test for disconnection. Changes to support recent
	fixes in the notification center.

	Eliminate a problematic code-path by not depending on the
	libdbus API for adding and removing match rules. Turns out we
	can just call the corresponding methods via the bus objects. 
